# agentic-os

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  biome.json  package.json  setup.py  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
_docs/: .docbot-cache.json  DEPENDENCIES.md  README.md
docker/: Dockerfile.agent  docker-compose.yml
holaos/: workspace-schema.json
research/: 2026-04-25-noon-sweep.md  2026-04-26-noon-sweep.md  2026-04-28-morning-sweep.md  2026-04-29-noon-sweep.md  2026-05-02-noon-sweep.md  2026-05-07-noon-sweep.md  2026-05-10-night-sweep.md  2026-05-10-noon-sweep.md  2026-05-11-noon-sweep.md  2026-05-12-noon-sweep.md  2026-05-18-noon-sweep.md  2026-05-19-morning-sweep.md  2026-05-21-morning-sweep.md  2026-05-22-noon-sweep.md  2026-05-23-morning-sweep.md  2026-05-31-noon-sweep.md  big-bank-backlog.md  big-bank-morning-sweep-2026-05-02.md  big-bank-morning-sweep-2026-05-15.md  big-bank-morning-sweep-2026-05-25.md  big_bank_database.json
services/agentic-ide/: README.md  pyproject.toml
services/agentic-ide/agentic_ide/: __init__.py  config.py  main.py  models.py
services/agentic-ide/agentic_ide/graph/: nodes.py  state.py  workflow.py
services/agentic-ide/agentic_ide/routes/: health.py  sessions.py
services/agentic-ide/agentic_ide/services/: session_store.py  tool_registry.py
services/agentic-ide/tests/: test_graph.py  test_main.py
skills/: README.md
spec-pack/: README.md  deployment-blueprint.md  holaos-architecture.md  master-spec.md  (+2 more)
(+152 files in other folders)
