[project]
name = "agentic-ide"
version = "0.1.0"
description = "Agentic IDE MVP — FastAPI + LangGraph orchestration for the Agentic OS control plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_ide"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
